samples/_failures_safe/1761348865_4b054a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2b68253.c: In function ‘main’:
./samples/SAFE/__tmp_f2b68253.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
